Sat Sep 16 14:53:00 2006  Tim Janik  <timj@gtk.org>

	* bseblockutils.cc: access Resampler2::create_impl() via derivation.

Sat Sep 16 09:35:26 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseblockutils.cc: Provide resampler factory method, so that an SSE
	resampler will be used when beast detects SSE instructions.

Tue Aug 29 20:48:48 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* davorgan.[hc]: Add transpose and fine_tune settings, just like they
	can be found in the oscillator code. Fixed a few minor i18n bugs in
	property translation markup.

Tue Aug 29 17:34:30 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* davxtalstrings.[hc]: Add transpose and fine_tune settings, just like
	they can be found in the oscillator code. Fixed a few minor i18n bugs
	in property translation markup.
	Use gdouble precision to store transposed frequency within the engine
	module data structure.

Sun Jul 16 13:58:12 2006  Tim Janik  <timj@gtk.org>

	* davsyndrum.c (dmod_process): fixed ratio read-out. spotted by Stefan.

Mon May 15 22:09:53 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* davsyndrum.c (dav_syn_drum_update_modules): It is important to
	update sample rate dependant parameters in the "params" struct within
	the object, because the "params" struct within the object will be used
	by dav_syn_drum_context_create to initialize the state for the
	modules. This fixes #337703.

Wed May 10 15:12:26 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseblockutils.cc: Minor optimizations, introduced a few LIKELY()
	calls to indicate what usually should be the case, and improved some
	comments.

Wed May 10 01:47:22 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseblockutils.cc (range, range_and_square_sum): Use SSE functions to
	calculate the minimum/maximum and the vector sum after the main loop.
	I benchmarked it on AMD64 and Pentium-M, and its faster on both.

Tue May  9 22:57:07 2006  Tim Janik  <timj@gtk.org>
